# muda

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  CMakePresets.json  MODULE.bazel  README.md  xmake.lua
.github/workflows/: cmake.yml
bazel_examples/: BUILD.bazel  test_main.cpp
bazel_examples/hello_muda/: hello_muda.cu  muda_vs_cuda.cu  muda_vs_cuda.h  vector_add.cu  vector_add.h
cmake/: muda-config.cmake  mudaConfig.cmake  options.cmake
docs/tutorial/: graph.md  tutorial.md
example/: BUILD.bazel  CMakeLists.txt  test.cu  test.h  test_main.cpp
example/device_query/: device_query.cu
example/hello_muda/: hello_muda.cu
example/profile/: kernel_name.cu
example/warp/: warp.cu
scripts/: build_docs.py
src/muda/buffer/: buffer_2d_view.h  buffer_view.h
src/muda/buffer/details/: buffer_2d_view.inl  buffer_3d_view.inl  buffer_launch.inl
src/muda/cub/device/: device_scan.h  device_spmv.h
src/muda/ext/eigen/: evd.h
src/muda/ext/field/sub_field/details/: soa_sub_field.inl
src/muda/ext/geo/lbvh/: bvh_viewer.h
src/muda/ext/geo/spatial_hash/: sparse_spatial_hash_impl.h
src/muda/ext/linear_system/: bcoo_matrix_view.h  device_bcoo_matrix.h  device_bcoo_vector.h  device_bsr_matrix.h  device_csr_matrix.h  device_doublet_vector.h  device_triplet_matrix.h  matrix_format_converter_impl.h  triplet_matrix_view.h  triplet_matrix_viewer.h
src/muda/ext/linear_system/details/routines/spmv/: triplet_spmv.inl
src/muda/ext/spgrid/: macro.h  spgrid.h  spgrid_layout.h  struct_reflect.h  struct_type.h  utils.h
src/muda/launch/: parallel_for.h  stream.h
src/muda/launch/details/: memory.inl  parallel_for.inl
src/muda/viewer/dense/: dense_0d.h  dense_1d.h
test/: BUILD.bazel  CMakeLists.txt
test/eigen_test/: CMakeLists.txt
test/linear_system_test/: CMakeLists.txt  spmv_test.cu
test/spgrid_test/: CMakeLists.txt  spgrid_test.cu
test/unit_test/: CMakeLists.txt  field_test.cu  lbvh_test.cu  spatial_hash_test.cu  thrust_test.cu  type_traits_test.cu
xmake/: muda_app_base.lua
