load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_cuda//cuda:defs.bzl", "cuda_binary", "cuda_library")

package(default_visibility = ["//visibility:public"])

cuda_library(
    name = "muda",
    hdrs = glob(
        [
            "src/**/*.h",
            "src/**/*.hpp",
            "src/**/*.inl",
            "src/**/*.cuh",
        ],
        allow_empty = True,
    ),
    copts = [
        "--expt-relaxed-constexpr",
        "--extended-lambda",
    ],
    includes = ["src"],
    visibility = ["//visibility:public"],
)