"""muda"""

module(
    name = "muda",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cc", version = "0.2.8")
# rules_cuda is required for CUDA toolchain support
bazel_dep(name = "rules_cuda", version = "0.2.5")

bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.3")