load("@rules_cuda//cuda:defs.bzl", "cuda_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "catch-main",
    srcs = ["catch_main.cpp"],
    deps = ["//external/catch2:catch2"],
    includes = ["external/catch2"],
)

cuda_library(
    name = "examples",
    hdrs = glob([
        "**/*.h",
    ]),
    srcs = glob([
        "**/*.cu",
    ]),
    deps = [
        "//:muda",
    ],
    copts = ["--expt-relaxed-constexpr", "--extended-lambda"],
    includes = ["."],
)

cc_test(
    name = "test_main",
    srcs = ["test_main.cpp"],
    deps = [
        ":catch-main",
        "//external/catch2:catch2",
        ":examples",
    ],
    copts = ["-std=c++17"],
    includes = ["../external"],
)
