load("@rules_cuda//cuda:defs.bzl", "cuda_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])


cc_library(
    name = "catch-main",
    srcs = ["main.cpp"],
    copts = [
        "-std=c++20",
    ],
    includes = ["../external"],
    deps = [
        "//external/catch2:catch2",
    ],
)

cc_test(
    name = "example",
    srcs = glob([
        "**/*.cu",
    ]),
    hdrs = ["example_common.h"],
    includes = ["../external", "."],
    deps = [
        "//:muda",
        "@eigen//:eigen",
        ":catch-main",
        "//external/catch2:catch2",
    ],
)
