load("@rules_cuda//cuda:defs.bzl", "cuda_binary")

cuda_binary(
    name = "examples",
    srcs = glob([
        "**/*.cu",
        "**/*.cpp",
    ]),
    hdrs = [
        "example_common.h",
    ],
    copts = [
        "-std=c++17",
    ],
    includes = ["."],
    rdc = True,
    visibility = ["//:__pkg__"],
    deps = [
        "//:muda",
        "//third_party:catch2",
        "@eigen",
    ],
)
