load("@rules_cuda//cuda:defs.bzl", "cuda_binary")

cuda_binary(
    name = "muda_unit_test",
    srcs = glob([
        "unit_test/**/*.cu",
        "unit_test/**/*.cpp",
    ]),
    copts = [
        "--expt-relaxed-constexpr",
        "--extended-lambda",
        "-std=c++20",
    ] + select({
        "@rules_cc//cc/compiler:msvc-cl": ["/wd4819"],
        "//conditions:default": [],
    }),
    rdc = True,
    deps = [
        "//:muda",
        "//third_party:catch2",
        "@eigen",
    ],
)

cuda_binary(
    name = "muda_eigen_test",
    srcs = glob([
        "eigen_test/**/*.cu",
        "eigen_test/**/*.cpp",
    ]),
    hdrs = glob(
        [
            "eigen_test/**/*.h",
            "eigen_test/**/*.hpp",
        ],
        allow_empty = True,
    ),
    copts = [
        "--expt-relaxed-constexpr",
        "--extended-lambda",
        "-std=c++20",
    ] + select({
        "@rules_cc//cc/compiler:msvc-cl": ["/wd4819"],
        "//conditions:default": [],
    }),
    rdc = True,
    deps = [
        "//:muda",
        "//third_party:catch2",
        "@eigen",
    ],
)

cuda_binary(
    name = "muda_linear_sysytem_test",
    srcs = glob([
        "linear_system_test/**/*.cu",
        "linear_system_test/**/*.cpp",
    ]),
    hdrs = glob(
        [
            "linear_system_test/**/*.h",
            "linear_system_test/**/*.hpp",
        ],
        allow_empty = True,
    ),
    copts = [
        "--expt-relaxed-constexpr",
        "--extended-lambda",
        "-std=c++20",
    ] + select({
        "@rules_cc//cc/compiler:msvc-cl": ["/wd4819"],
        "//conditions:default": [],
    }),
    rdc = True,
    deps = [
        "//:muda",
        "//third_party:catch2",
        "@eigen",
        "@local_cuda//:cublas",
        "@local_cuda//:cusolver",
        "@local_cuda//:cusparse",
    ],
)
